Add logo and our navigation menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 <body>
   <div class="container">
   <!-- Nav bar -->
-  
+    <nav class="main-nav">
+      <img src="/images/H_artLogo.png" alt="h_art the band logo" class="logo">
+
+      <ul class="main-menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="">Biography</a></li>
+      </ul>
+    </nav>
   <!-- End of Nav bar -->
 </div>
 </body>
