Add showcase section, which is an image in html file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       </ul>
     </nav>
   <!-- End of Nav bar -->
+
+  <!-- Showcase section -->
+  <img src="/images/htb2.jpg" alt="" id="showcase">
+  <!-- End of Showcase section -->
 </div>
 </body>
 </html>
