Add the about section which has p, h2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,33 @@
   <!-- Showcase section -->
   <img src="/images/htb2.jpg" alt="" id="showcase">
   <!-- End of Showcase section -->
+
+  <!-- About the band -->
+  <div class="about">
+    <h2>H_art The Band</h2>
+  <p>
+    H_art the band is a Kenyan boy's band, made up of 
+    <strong>Wachira Gatama, Kenneth Muya and Mordecai Mwini</strong>. 
+    It was formed in <em>2012</em> when the trio met a 
+    Kenya National Theater. Their breakthrough track 
+    <a href="https://www.youtube.com/watch?v=rd00ZV9yPAU"><em>
+    uliza kiatu</em></a> stole our hearts, while their most viewed 
+    song <em><a href="https://www.youtube.com/watch?v=ORSUkuft38U">
+    Nikikutazama</a></em> established them among Kenya's top tier 
+    singing groups.
+  </p>
+
+  <h3>Why i love them.</h3>
+  <p>Being a lover of poet, their word play brings that poetic vibe 
+    in their songs. Secondly, most of their songs is about love, 
+    and who doesn't vibe to love?</p>
+    <p>Find out more about the band <a href="https://www.instagram.com/h_arttheband/?hl=en">H_art the band</a></p>
+  </div>
+  <!-- End of About the band -->
+
+  <!-- About their music -->
+  <!-- End of About their music -->
+  
 </div>
 </body>
 </html>
