add linking index page with biography page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <ul class="main-menu">
         <li><a href="#">Home</a></li>
-        <li><a href="">Biography</a></li>
+        <li><a href="bio.html">Biography</a></li>
       </ul>
     </nav>
   <!-- End of Nav bar -->
@@ -46,56 +46,65 @@
 
   <!-- About their music -->
   <div class="music">
-    <h3>Favourite Song</h3>
-    <p>The following is a list of my favourite songs from H_art the band.</p>
-    <ul class="songs">
-      <li>Issa Vibe ft. <a href="https://www.youtube.com/user/sautisol" target="_blank">Sauti sol</a>
-        <ul>
-          <li>
-            <p><a href="https://harttheband.com/product/issa-vibe-ft-sauti-sol/" target="_blank">Listen here</a></p>
-          </li>
-        </ul>
-      </li>
-      <li>El Shaddai ft. <a href="https://www.instagram.com/cedo_producer/?hl=en" target="_blank">Cedo</a>
-        <ul>
-          <li><a href="https://harttheband.com/product/el-shaddai-ft-cedo/" target="_blank">LIsten here</a></li>
-        </ul>
-      </li>
-      <li>Papaya Family
-        <ul>
-          <li><a href="https://www.youtube.com/watch?v=W3o8ujSGxc8" target="_blank">Listen here</a></li>
-        </ul>
-      </li>
-      <li>Na bado ft. <a href="https://www.youtube.com/channel/UCNzd8n4UapaAtrhC062RxDQ" target="_blank">Nyashinki</a>
-        <ul>
-          <li><a href="https://www.youtube.com/watch?v=W3o8ujSGxc8" target="_blank">Listen here</a></li>
-        </ul>
-      </li>
-    </ul>
-
-    <h3>Albums</h3>
-    <p>The following is the list of their album and where to get them.</p>
-    <ol class="album">
-      <li>Simple Man <em>released on </em>
-        <ul>
-          <li><a href="https://harttheband.com/product/simple-man-album-soundtracks-of-our-lives/">LIsten here</a></li>
-        </ul>
-      </li>
-
-      <li>ShoeKran <em>Released on </em>
-        <ul>
-          <li><a href="https://harttheband.com/product/shoekran/">Listen here</a></li>
-        </ul>
-      </li>
-
-      <li>Made in the Streets <em>Released on</em>
-        <ul>
-          <li><a href="https://harttheband.com/product/made-in-the-streets/">Listen here</a></li>
-        </ul>
-      </li>
-    </ol>
+    <div class="songs">
+      <h3>Favourite Song</h3>
+      <p>The following is a list of my favourite songs from H_art the band.</p>
+      <ul>
+        <li>Issa Vibe ft. <a href="https://www.youtube.com/user/sautisol" target="_blank">Sauti sol</a>
+          <ul>
+            <li>
+              <p><a href="https://harttheband.com/product/issa-vibe-ft-sauti-sol/" target="_blank">Listen here</a></p>
+            </li>
+          </ul>
+        </li>
+        <li>El Shaddai ft. <a href="https://www.instagram.com/cedo_producer/?hl=en" target="_blank">Cedo</a>
+          <ul>
+            <li><a href="https://harttheband.com/product/el-shaddai-ft-cedo/" target="_blank">LIsten here</a></li>
+          </ul>
+        </li>
+        <li>Papaya Family
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=W3o8ujSGxc8" target="_blank">Listen here</a></li>
+          </ul>
+        </li>
+        <li>Na bado ft. <a href="https://www.youtube.com/channel/UCNzd8n4UapaAtrhC062RxDQ" target="_blank">Nyashinki</a>
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=W3o8ujSGxc8" target="_blank">Listen here</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="album">
+      <h3>Albums</h3>
+      <p>The following is the list of their album and where to get them.</p>
+      <ol>
+        <li>Simple Man <em>released on </em>
+          <ul>
+            <li><a href="https://harttheband.com/product/simple-man-album-soundtracks-of-our-lives/">LIsten here</a></li>
+          </ul>
+        </li>
+  
+        <li>ShoeKran <em>Released on </em>
+          <ul>
+            <li><a href="https://harttheband.com/product/shoekran/">Listen here</a></li>
+          </ul>
+        </li>
+  
+        <li>Made in the Streets <em>Released on</em>
+          <ul>
+            <li><a href="https://harttheband.com/product/made-in-the-streets/">Listen here</a></li>
+          </ul>
+        </li>
+      </ol>
+    </div>
   </div>
   <!-- End of About their music -->
+
+  <!-- footer -->
+  <div class="footer">
+    
+  </div>
+  <!-- end of footer -->
   
 </div>
 </body>
