Add the second member of the band

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   </p>
 
   <h3>Why i love them.</h3>
-  <p>Being a lover of poet, their word play brings that poetic vibe 
-    in their songs. Secondly, most of their songs is about love, 
-    and who doesn't vibe to love?</p>
+  <p>I love them for their music, spoken word/poetry and fashion.
+     Also for the fact that most of their songs is about love,
+    who doesn't vibe to love? </p>
     <p>Find out more about the band <a href="https://www.instagram.com/h_arttheband/?hl=en">H_art the band</a></p>
   </div>
   <!-- End of About the band -->
