--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <!-- footer -->
   <div class="footer">
-    
+    <p>favourite band site. crafted by <em>Kinoti Gitonga</em></p>
   </div>
   <!-- end of footer -->
   
