Add extra songs in the songs list

--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
             <li><a href="https://www.youtube.com/watch?v=W3o8ujSGxc8" target="_blank">Listen here</a></li>
           </ul>
         </li>
+        <li>Uliza Kiatu
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=rd00ZV9yPAU" target="_blank">Listen here</a></li>
+          </ul>
+        </li>
+        <li>Nikikutazama
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=ORSUkuft38U" target="_blank">Listen here</a></li>
+          </ul>
+        </li>
+        <li>Rosella ft. <a href="https://www.youtube.com/channel/UCYHxkCl1LemO04Q4n-KkSmQ" target="_blank">Lady Jaydee</a>
+          <ul>
+            <li><a href="https://www.youtube.com/watch?v=h1gzcNpDLNI" target="_blank">Listen here</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
     <div class="album">
