Adding everything as is do final touches to the projec

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="/images/H_artLogo.png" alt="h_art the band logo" class="logo">
 
       <ul class="main-menu">
-        <li><a href="#">Home</a></li>
+        <li class="current"><a href="#">Home</a></li>
         <li><a href="bio.html">Biography</a></li>
       </ul>
     </nav>
