Add changes to image src attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="container">
   <!-- Nav bar -->
     <nav class="main-nav">
-      <img src="/images/H_artLogo.png" alt="h_art the band logo" class="logo">
+      <img src="images/H_artLogo.png" alt="h_art the band logo" class="logo">
 
       <ul class="main-menu">
         <li class="current"><a href="#">Home</a></li>
@@ -18,7 +18,7 @@
   <!-- End of Nav bar -->
 
   <!-- Showcase section -->
-  <img src="/images/htb2.jpg" alt="" id="showcase">
+  <img src="images/htb2.jpg" alt="" id="showcase">
   <!-- End of Showcase section -->
 
   <!-- About the band -->
